[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
categories = ["web-programming", "microsoft-exchange", "microsoft-graph"]
description = "A Rust library for interacting with Microsoft Exchange in a friendly format."
edition = "2021"
homepage = "https://github.com/neeml/exchange-rs/wiki"
keywords = ["microsoft", "exchange", "graph", "microsoft-graph", "ews", "office365", "outlook"]
license = "Apache-2.0"
name = "exchange-rs"
readme = "README.md"
repository = "https://github.com/neeml/exchange-rs.git"
rust-version = "1.65.0"
version = "0.1.0"

[features]
default = []
blocking = ["reqwest/blocking"]
ews = ["quick-xml", "reqwest"]
graph = ["graph-rs-sdk"]

[dependencies]
anyhow = "1.0.86"
graph-rs-sdk = { version = "2.0.0", default-features = false, features = ["rustls-tls"], optional = true }
melib = "0.8.4"
quick-xml = { version = "0.36.0", default-features = false, features = ["serialize"], optional = true }
reqwest = { version = "0.12.5", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
debug = false
