# SPDX-FileCopyrightText: 2024 The Exchangers MailDevelopers
#
# SPDX-License-Identifier: Apache-2.0

[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
categories = ["web-programming", "email", "network-programming"]
description = "A Rust library for interacting with Microsoft Exchange in a friendly format."
edition = "2021"
homepage = "https://github.com/exchangers-mail/exchange-rs/wiki"
keywords = ["microsoft", "exchange", "microsoft-graph", "ews", "office365"]
license = "Apache-2.0"
name = "exchange-rs"
readme = "README.md"
repository = "https://github.com/exchangers-mail/exchange-rs.git"
rust-version = "1.65.0"
version = "0.1.0"

[features]
default = []
blocking = ["reqwest/blocking"]
ews = ["dep:ews", "xml_struct", "xml_struct_derive", "reqwest"]
graph = ["graph-rs-sdk"]

[dependencies]
anyhow = "1.0.96"
ews = { rev = "e5249875870fcd4bbbb3bfc37384e39aa8875f5b", git = "https://github.com/thunderbird/ews-rs", optional = true }
file-format = "0.26.0"
graph-rs-sdk = { version = "2.0.3", default-features = false, features = ["rustls-tls"], optional = true }
melib = "0.8.10"
ms-autodiscover = "0.3.3"
reqwest = { version = "0.12.9", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
xml_struct = { rev = "87723b90425d474fd29095d8b710baefd7c9b13a", git = "https://github.com/thunderbird/xml-struct-rs", optional = true }
xml_struct_derive = { rev = "87723b90425d474fd29095d8b710baefd7c9b13a", git = "https://github.com/thunderbird/xml-struct-rs", optional = true }

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
debug = false
